src/test/deca/syntax/valid/this-simpleCall.deca
class A {
    int x;

    void coco() {
        this.x;
    }
}

