src/test/deca/syntax/invalid/declField-private.deca
class Useless{
    private int privVar;
}
